# workfllow-execution

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_workflow_schema.py  002_add_base_types.py  003_add_table_base_type.py  4a780231d1ef_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  errors.py  schemas.py
app/application/: __init__.py
app/core/: __init__.py  config.py  cors.py  database.py  logging.py  middleware.py
app/domain/: __init__.py  exceptions.py
app/infrastructure/: __init__.py  health.py  redis_client.py
app/modules/: __init__.py
docs/: DEVELOPER_GUIDE.md
docs/adr/: 001-architecture-and-standards.md
tests/: conftest.py  test_config.py  test_health.py  test_middleware.py
tests/fixtures/: node_add_child_parts.json  node_general_information.json  node_raw_material_pricing.json  workflow_test.json  workflow_with_table.json
tests/integration/: test_definitions_api.py  test_event_store.py  test_executions_api.py  test_orchestrator.py  test_projections.py  test_repositories.py
tests/unit/: test_api_schemas.py  test_base_executor.py  test_definition_validation.py  test_event_handler_registry.py  test_event_payloads.py  test_event_store.py  test_execution_export.py  test_execution_summary.py  test_executor_registry.py  test_form_blueprint.py  test_form_field_validator.py  test_formula.py  test_node_form_schema.py  test_output_fields.py  test_scheduler.py  test_task_names.py  (+8 more)
(+82 files in other folders)
