[project]
name = "workflow-engine"
version = "0.1.0"
description = "Python workflow execution engine"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring PostgreSQL (run with: pytest -m integration)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Depends() in FastAPI route defaults
]

[tool.ruff.lint.per-file-ignores]
"app/infrastructure/db/models/*.py" = ["F821", "UP042"]
"app/domain/enums.py" = ["UP042"]
"app/domain/events/types.py" = ["UP042"]
"alembic/versions/*.py" = ["UP007", "UP035"]
"app/core/logging.py" = ["UP017"]
"app/infrastructure/db/repositories/instances.py" = ["UP017"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
